--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.12.0",
-    "graphql": "^16.8.0"
+    "dotenv": "^16.3.1",
+    "graphql": "^16.8.0",
+    "mongoose": "^7.4.4"
   }
 }
