--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^3.12.0",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4"
   }
 }
